service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-service
spec:
  selector:
    app: cicd-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
